--- a/homepage/home.html
+++ b/homepage/home.html
@@ -14,9 +14,10 @@
         <div class=logInMenu><span  class="username">Username:</span>
           <div class="userBox"></div><span  class="password">Password:</span>
           <div class="passBox"></div>
-          <div class=honestlyIdk></div><span  class="logInDown">Log in</span>
-          <span  class="smallText">Don’t have an account? Sign up</span>
-          <span  class="signUp">Sign up</span>
+          <div class=honestlyIdk></div>
+          <button  class="logInDown">Log in</button>
+          <span  class="smallText">Don’t have an account? <u>Sign up</u></span>
+          <button  class="signUp">Sign up</button>
           <span  class="logIn">Log in</span>
         </div>
 
@@ -32,7 +33,7 @@
             So I'ma sing my soul, I'ma sing my soul, yeah
             </span></div>
           <div class=logo>
-          <img src="E:\Desk\Sappho\homepage\Original Logo.png" alt="Logo">
+          <img src="E:\Desk\Sappho\homepage\OriginalLogo.png" alt="Logo">
           </div>
           <!--<picture>
             <source srcset="E:\Desk\Sappho\homepage\smallestman.png" media="(max-width: 600px)">
