--- a/homepage/home.html
+++ b/homepage/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sappho</title>
     <!-- Boobie traps or whatever -->
-    <link rel="stylesheet" href="E:\Desk\Sappho\bootstrap-5.0.1-dist\css\bootstrap.css"/>
+    <link rel="stylesheet" href="E:/Desk/Sappho/bootstrap-5.0.1-dist/css/bootstrap.css"/>
     <!-- Stylesheet homemade freshbaked chocolate chips -->
     <link rel="stylesheet" href="home.css" />
   </head>
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color:FFF6EE">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="E:\Desk\Sappho\resources\OriginalLogoMaybeSmaller.png" alt="logo">
+              <img src="E:/Desk/Sappho/resources/OriginalLogoMaybeSmaller.png" alt="logo">
           </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -104,7 +104,7 @@
    
 
     <!-- Js dependencies  --> 
-    <script src="E:\Desk\Sappho\bootstrap-5.0.1-dist\js\bootstrap.js"></script>
+    <script src="E:/Desk/Sappho/bootstrap-5.0.1-dist/js/bootstrap.js"></script>
     <script src="home.js"></script>
   </body>
 </html>
